// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ViewReducer should handle specific defined types: defined type SET_QUERY_CLEAR 1`] = `
Object {
  "result": Object {
    "graphTallyQuery": Object {},
    "inventoryGuestsQuery": Object {},
    "inventoryHostsQuery": Object {
      "test_id": Object {
        "dir": "dolor desc direction",
        "offset": 30,
        "sort": "dolor sort",
      },
    },
    "inventorySubscriptionsQuery": Object {
      "test_id": Object {
        "dir": "ipsum desc direction",
        "offset": 20,
        "sort": "ipsum sort",
      },
    },
    "query": Object {
      "test_id": Object {},
    },
  },
  "type": "SET_QUERY_CLEAR",
}
`;

exports[`ViewReducer should handle specific defined types: defined type SET_QUERY_CLEAR_INVENTORY_LIST 1`] = `
Object {
  "result": Object {
    "graphTallyQuery": Object {},
    "inventoryGuestsQuery": Object {},
    "inventoryHostsQuery": Object {
      "test_id": Object {
        "dir": "dolor desc direction",
        "offset": 0,
        "sort": "dolor sort",
      },
    },
    "inventorySubscriptionsQuery": Object {
      "test_id": Object {
        "dir": "ipsum desc direction",
        "offset": 0,
        "sort": "ipsum sort",
      },
    },
    "query": Object {},
  },
  "type": "SET_QUERY_CLEAR_INVENTORY_LIST",
}
`;

exports[`ViewReducer should handle specific defined types: defined type SET_QUERY_RESET_INVENTORY_LIST 1`] = `
Object {
  "result": Object {
    "graphTallyQuery": Object {},
    "inventoryGuestsQuery": Object {},
    "inventoryHostsQuery": Object {
      "test_id": Object {
        "offset": 0,
      },
    },
    "inventorySubscriptionsQuery": Object {
      "test_id": Object {
        "offset": 0,
      },
    },
    "query": Object {},
  },
  "type": "SET_QUERY_RESET_INVENTORY_LIST",
}
`;

exports[`ViewReducer should handle specific defined types: defined type SET_QUERY_RHSM_HOSTS_INVENTORY_dir 1`] = `
Object {
  "result": Object {
    "graphTallyQuery": Object {},
    "inventoryGuestsQuery": Object {},
    "inventoryHostsQuery": Object {
      "test_id": Object {
        "dir": "lorem asc direction",
        "offset": 30,
        "sort": "dolor sort",
      },
    },
    "inventorySubscriptionsQuery": Object {
      "test_id": Object {
        "dir": "ipsum desc direction",
        "offset": 20,
        "sort": "ipsum sort",
      },
    },
    "query": Object {},
  },
  "type": "SET_QUERY_RHSM_HOSTS_INVENTORY_dir",
}
`;

exports[`ViewReducer should handle specific defined types: defined type SET_QUERY_RHSM_HOSTS_INVENTORY_display_name_contains 1`] = `
Object {
  "result": Object {
    "graphTallyQuery": Object {},
    "inventoryGuestsQuery": Object {},
    "inventoryHostsQuery": Object {
      "test_id": Object {
        "dir": "dolor desc direction",
        "display_name_contains": "lorem name",
        "offset": 30,
        "sort": "dolor sort",
      },
    },
    "inventorySubscriptionsQuery": Object {
      "test_id": Object {
        "dir": "ipsum desc direction",
        "offset": 20,
        "sort": "ipsum sort",
      },
    },
    "query": Object {},
  },
  "type": "SET_QUERY_RHSM_HOSTS_INVENTORY_display_name_contains",
}
`;

exports[`ViewReducer should handle specific defined types: defined type SET_QUERY_RHSM_HOSTS_INVENTORY_limit 1`] = `
Object {
  "result": Object {
    "graphTallyQuery": Object {},
    "inventoryGuestsQuery": Object {},
    "inventoryHostsQuery": Object {
      "test_id": Object {
        "dir": "dolor desc direction",
        "limit": 10,
        "offset": 30,
        "sort": "dolor sort",
      },
    },
    "inventorySubscriptionsQuery": Object {
      "test_id": Object {
        "dir": "ipsum desc direction",
        "offset": 20,
        "sort": "ipsum sort",
      },
    },
    "query": Object {},
  },
  "type": "SET_QUERY_RHSM_HOSTS_INVENTORY_limit",
}
`;

exports[`ViewReducer should handle specific defined types: defined type SET_QUERY_RHSM_HOSTS_INVENTORY_offset 1`] = `
Object {
  "result": Object {
    "graphTallyQuery": Object {},
    "inventoryGuestsQuery": Object {},
    "inventoryHostsQuery": Object {
      "test_id": Object {
        "dir": "dolor desc direction",
        "offset": 10,
        "sort": "dolor sort",
      },
    },
    "inventorySubscriptionsQuery": Object {
      "test_id": Object {
        "dir": "ipsum desc direction",
        "offset": 20,
        "sort": "ipsum sort",
      },
    },
    "query": Object {},
  },
  "type": "SET_QUERY_RHSM_HOSTS_INVENTORY_offset",
}
`;

exports[`ViewReducer should handle specific defined types: defined type SET_QUERY_RHSM_HOSTS_INVENTORY_sort 1`] = `
Object {
  "result": Object {
    "graphTallyQuery": Object {},
    "inventoryGuestsQuery": Object {},
    "inventoryHostsQuery": Object {
      "test_id": Object {
        "dir": "dolor desc direction",
        "offset": 30,
        "sort": "lorem sort",
      },
    },
    "inventorySubscriptionsQuery": Object {
      "test_id": Object {
        "dir": "ipsum desc direction",
        "offset": 20,
        "sort": "ipsum sort",
      },
    },
    "query": Object {},
  },
  "type": "SET_QUERY_RHSM_HOSTS_INVENTORY_sort",
}
`;

exports[`ViewReducer should handle specific defined types: defined type SET_QUERY_RHSM_SUBSCRIPTIONS_INVENTORY_dir 1`] = `
Object {
  "result": Object {
    "graphTallyQuery": Object {},
    "inventoryGuestsQuery": Object {},
    "inventoryHostsQuery": Object {
      "test_id": Object {
        "dir": "dolor desc direction",
        "offset": 30,
        "sort": "dolor sort",
      },
    },
    "inventorySubscriptionsQuery": Object {
      "test_id": Object {
        "dir": "lorem asc direction",
        "offset": 20,
        "sort": "ipsum sort",
      },
    },
    "query": Object {},
  },
  "type": "SET_QUERY_RHSM_SUBSCRIPTIONS_INVENTORY_dir",
}
`;

exports[`ViewReducer should handle specific defined types: defined type SET_QUERY_RHSM_SUBSCRIPTIONS_INVENTORY_limit 1`] = `
Object {
  "result": Object {
    "graphTallyQuery": Object {},
    "inventoryGuestsQuery": Object {},
    "inventoryHostsQuery": Object {
      "test_id": Object {
        "dir": "dolor desc direction",
        "offset": 30,
        "sort": "dolor sort",
      },
    },
    "inventorySubscriptionsQuery": Object {
      "test_id": Object {
        "dir": "ipsum desc direction",
        "limit": 10,
        "offset": 20,
        "sort": "ipsum sort",
      },
    },
    "query": Object {},
  },
  "type": "SET_QUERY_RHSM_SUBSCRIPTIONS_INVENTORY_limit",
}
`;

exports[`ViewReducer should handle specific defined types: defined type SET_QUERY_RHSM_SUBSCRIPTIONS_INVENTORY_offset 1`] = `
Object {
  "result": Object {
    "graphTallyQuery": Object {},
    "inventoryGuestsQuery": Object {},
    "inventoryHostsQuery": Object {
      "test_id": Object {
        "dir": "dolor desc direction",
        "offset": 30,
        "sort": "dolor sort",
      },
    },
    "inventorySubscriptionsQuery": Object {
      "test_id": Object {
        "dir": "ipsum desc direction",
        "offset": 10,
        "sort": "ipsum sort",
      },
    },
    "query": Object {},
  },
  "type": "SET_QUERY_RHSM_SUBSCRIPTIONS_INVENTORY_offset",
}
`;

exports[`ViewReducer should handle specific defined types: defined type SET_QUERY_RHSM_SUBSCRIPTIONS_INVENTORY_sort 1`] = `
Object {
  "result": Object {
    "graphTallyQuery": Object {},
    "inventoryGuestsQuery": Object {},
    "inventoryHostsQuery": Object {
      "test_id": Object {
        "dir": "dolor desc direction",
        "offset": 30,
        "sort": "dolor sort",
      },
    },
    "inventorySubscriptionsQuery": Object {
      "test_id": Object {
        "dir": "ipsum desc direction",
        "offset": 20,
        "sort": "lorem sort",
      },
    },
    "query": Object {},
  },
  "type": "SET_QUERY_RHSM_SUBSCRIPTIONS_INVENTORY_sort",
}
`;

exports[`ViewReducer should handle specific defined types: defined type SET_QUERY_RHSM_beginning 1`] = `
Object {
  "result": Object {
    "graphTallyQuery": Object {
      "test_id": Object {
        "beginning": "2018-02-01T00:00:00.000Z",
      },
    },
    "inventoryGuestsQuery": Object {},
    "inventoryHostsQuery": Object {
      "test_id": Object {
        "dir": "dolor desc direction",
        "offset": 30,
        "sort": "dolor sort",
      },
    },
    "inventorySubscriptionsQuery": Object {
      "test_id": Object {
        "dir": "ipsum desc direction",
        "offset": 20,
        "sort": "ipsum sort",
      },
    },
    "query": Object {},
  },
  "type": "SET_QUERY_RHSM_beginning",
}
`;

exports[`ViewReducer should handle specific defined types: defined type SET_QUERY_RHSM_ending 1`] = `
Object {
  "result": Object {
    "graphTallyQuery": Object {
      "test_id": Object {
        "ending": "2021-02-01T23:59:59.999Z",
      },
    },
    "inventoryGuestsQuery": Object {},
    "inventoryHostsQuery": Object {
      "test_id": Object {
        "dir": "dolor desc direction",
        "offset": 30,
        "sort": "dolor sort",
      },
    },
    "inventorySubscriptionsQuery": Object {
      "test_id": Object {
        "dir": "ipsum desc direction",
        "offset": 20,
        "sort": "ipsum sort",
      },
    },
    "query": Object {},
  },
  "type": "SET_QUERY_RHSM_ending",
}
`;

exports[`ViewReducer should handle specific defined types: defined type SET_QUERY_RHSM_granularity 1`] = `
Object {
  "result": Object {
    "graphTallyQuery": Object {
      "test_id": Object {
        "granularity": "lorem granularity",
      },
    },
    "inventoryGuestsQuery": Object {},
    "inventoryHostsQuery": Object {
      "test_id": Object {
        "dir": "dolor desc direction",
        "offset": 30,
        "sort": "dolor sort",
      },
    },
    "inventorySubscriptionsQuery": Object {
      "test_id": Object {
        "dir": "ipsum desc direction",
        "offset": 20,
        "sort": "ipsum sort",
      },
    },
    "query": Object {},
  },
  "type": "SET_QUERY_RHSM_granularity",
}
`;

exports[`ViewReducer should handle specific defined types: defined type SET_QUERY_RHSM_sla 1`] = `
Object {
  "result": Object {
    "graphTallyQuery": Object {},
    "inventoryGuestsQuery": Object {},
    "inventoryHostsQuery": Object {
      "test_id": Object {
        "dir": "dolor desc direction",
        "offset": 30,
        "sort": "dolor sort",
      },
    },
    "inventorySubscriptionsQuery": Object {
      "test_id": Object {
        "dir": "ipsum desc direction",
        "offset": 20,
        "sort": "ipsum sort",
      },
    },
    "query": Object {
      "test_id": Object {
        "sla": "lorem sla",
      },
    },
  },
  "type": "SET_QUERY_RHSM_sla",
}
`;

exports[`ViewReducer should handle specific defined types: defined type SET_QUERY_RHSM_uom 1`] = `
Object {
  "result": Object {
    "graphTallyQuery": Object {},
    "inventoryGuestsQuery": Object {},
    "inventoryHostsQuery": Object {
      "test_id": Object {
        "dir": "dolor desc direction",
        "offset": 30,
        "sort": "dolor sort",
      },
    },
    "inventorySubscriptionsQuery": Object {
      "test_id": Object {
        "dir": "ipsum desc direction",
        "offset": 20,
        "sort": "ipsum sort",
      },
    },
    "query": Object {
      "test_id": Object {
        "uom": "lorem uom",
      },
    },
  },
  "type": "SET_QUERY_RHSM_uom",
}
`;

exports[`ViewReducer should handle specific defined types: defined type SET_QUERY_RHSM_usage 1`] = `
Object {
  "result": Object {
    "graphTallyQuery": Object {},
    "inventoryGuestsQuery": Object {},
    "inventoryHostsQuery": Object {
      "test_id": Object {
        "dir": "dolor desc direction",
        "offset": 30,
        "sort": "dolor sort",
      },
    },
    "inventorySubscriptionsQuery": Object {
      "test_id": Object {
        "dir": "ipsum desc direction",
        "offset": 20,
        "sort": "ipsum sort",
      },
    },
    "query": Object {
      "test_id": Object {
        "usage": "ipsum usage",
      },
    },
  },
  "type": "SET_QUERY_RHSM_usage",
}
`;
